--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: Pl3xMap-Marker
-version: '1.7'
+version: '2.0'
 main: god.sentix.pl3xmarker.Main
-api-version: 1.17
-depend: [ Pl3xMap ]
+api-version: 1.18
+depend: [ squaremap ]
 authors: [ Sentix ]
-description: Simple marker extension for Pl3xMap
+description: Simple marker extension for Pl3xMap/squaremap
 website: https://github.com/SentixDev/Pl3xMap-Marker
 
 commands:
